[gd_scene load_steps=57 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://UI/littlearrowhover.png" type="Texture" id=2]
[ext_resource path="res://UI/littlearrowpressed.png" type="Texture" id=3]
[ext_resource path="res://UI/littlearrow.png" type="Texture" id=4]
[ext_resource path="res://UI/littlearrowleft.png" type="Texture" id=5]
[ext_resource path="res://UI/littlearrowhoverleft.png" type="Texture" id=6]
[ext_resource path="res://Textures/Base/upperbodyatlas.png" type="Texture" id=7]
[ext_resource path="res://Textures/UpperBody/cloth1.png" type="Texture" id=9]
[ext_resource path="res://Textures/Head/hair1.png" type="Texture" id=10]
[ext_resource path="res://Textures/Base/lowerbodyatlas.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.09367, 15.0005 )

[sub_resource type="Animation" id=2]
resource_name = "idleback"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseLowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idlefront"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseLowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idleright"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseLowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseLowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=6]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseLowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=7]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseLowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=33]
resource_name = "idlebackbiggun"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="Animation" id=8]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=34]
resource_name = "idlefrontbiggun"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 17 ]
}

[sub_resource type="Animation" id=9]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=35]
resource_name = "idlerightbiggun"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=36]
resource_name = "walkdownbiggun"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=10]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=37]
resource_name = "walkrightbiggun"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=11]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=38]
resource_name = "walkupbiggun"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=12]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=13]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=14]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=45]
resource_name = "idleright"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=15]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=17]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=18]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=46]
resource_name = "idleright"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=19]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=20]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}

[sub_resource type="Animation" id=21]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=42]
resource_name = "idlebackbiggun"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 15 ]
}

[sub_resource type="Animation" id=22]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=43]
resource_name = "idlefrontbiggun"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 17 ]
}

[sub_resource type="Animation" id=23]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=44]
resource_name = "idlerightbiggun"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=39]
resource_name = "walkdownbiggun"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=24]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=40]
resource_name = "walkrightbiggun"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=25]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=41]
resource_name = "walkupbiggun"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=26]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=27]
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=28]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=29]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=30]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=31]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=32]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( 0, 0.9 )
shape = SubResource( 1 )

[node name="BaseLowerBodySprite" type="Sprite" parent="."]
texture = ExtResource( 11 )
vframes = 4
hframes = 4
frame = 1

[node name="BaseLowerBodyAnim" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/idleback = SubResource( 2 )
anims/idlefront = SubResource( 3 )
anims/idleright = SubResource( 4 )
anims/walkdown = SubResource( 5 )
anims/walkright = SubResource( 6 )
anims/walkup = SubResource( 7 )

[node name="BaseUpperBodySprite" type="Sprite" parent="."]
modulate = Color( 0.368627, 0.184314, 0.113725, 1 )
texture = ExtResource( 7 )
vframes = 4
hframes = 6
frame = 13

[node name="BaseUpperBodyAnim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/idlebackbiggun = SubResource( 33 )
anims/idlebackdefault = SubResource( 8 )
anims/idlefrontbiggun = SubResource( 34 )
anims/idlefrontdefault = SubResource( 9 )
anims/idlerightbiggun = SubResource( 35 )
anims/walkdownbiggun = SubResource( 36 )
anims/walkdowndefault = SubResource( 10 )
anims/walkrightbiggun = SubResource( 37 )
anims/walkrightdefault = SubResource( 11 )
anims/walkupbiggun = SubResource( 38 )
anims/walkupdefault = SubResource( 12 )

[node name="HeadSprite" type="Sprite" parent="."]
texture = ExtResource( 10 )
vframes = 2
hframes = 2
frame = 1

[node name="HeadAnim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/idleback = SubResource( 13 )
anims/idlefront = SubResource( 14 )
anims/idleright = SubResource( 45 )
anims/walkright = SubResource( 15 )
anims/walkup = SubResource( 16 )

[node name="LowerBodySprite" type="Sprite" parent="."]
texture = ExtResource( 11 )
vframes = 4
hframes = 4
frame = 1

[node name="LowerBodyAnim" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/idleback = SubResource( 17 )
anims/idlefront = SubResource( 18 )
anims/idleright = SubResource( 46 )
anims/walkdown = SubResource( 19 )
anims/walkright = SubResource( 20 )
anims/walkup = SubResource( 21 )

[node name="UpperBodySprite" type="Sprite" parent="."]
texture = ExtResource( 9 )
vframes = 4
hframes = 6
frame = 1

[node name="UpperBodyAnim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/idlebackbiggun = SubResource( 42 )
anims/idlebackdefault = SubResource( 22 )
anims/idlefrontbiggun = SubResource( 43 )
anims/idlefrontdefault = SubResource( 23 )
anims/idlerightbiggun = SubResource( 44 )
anims/walkdownbiggun = SubResource( 39 )
anims/walkdowndefault = SubResource( 24 )
anims/walkrightbiggun = SubResource( 40 )
anims/walkrightdefault = SubResource( 25 )
anims/walkupbiggun = SubResource( 41 )
anims/walkupdefault = SubResource( 26 )

[node name="GunSprite" type="Sprite" parent="."]
hframes = 6
frame = 3

[node name="GunAnim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/idleback = SubResource( 27 )
anims/idlefront = SubResource( 28 )
anims/idleright = SubResource( 29 )
anims/walkdown = SubResource( 30 )
anims/walkright = SubResource( 31 )
anims/walkup = SubResource( 32 )

[node name="ColorPicker" type="ColorPicker" parent="."]
visible = false
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
rect_scale = Vector2( 0.1, 0.1 )
color = Color( 0.470588, 0.286275, 0.286275, 1 )
edit_alpha = false
presets_enabled = false
presets_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRight" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = -4.0
margin_right = 16.0
margin_bottom = 4.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLeft" type="TextureButton" parent="."]
margin_left = -16.0
margin_top = -4.0
margin_right = -8.0
margin_bottom = 4.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonRight" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="ButtonLeft" to="." method="_on_button_left_pressed"]
